Micronaut {version} includes the following changes:

=== Core Features

==== Kotlin 1.4

Micronaut now ships with Kotlin 1.4 for those users using Kotlin.

==== Introspections for JDK 14 Records

It is now possible to define <<introspection, bean introspections>> on JDK 14+ record types (note these currently require the `––enable–preview` flag to the compiler and JVM).

==== Client Binding API

A new API has been created to allow for binding declarative HTTP client method arguments to an HTTP request. See the <<clientParameters, documentation>> for more information.

==== Websocket Improvements

Query parameters are now respected and bindable in the Micronaut websocket support.

==== HttpResponse Improvements

Cookies in HTTP responses from the client side are now retrievable on the HttpResponse. These are the cookies found in the `Set-Cookie` header.

==== Mandatory upgrade for Netty tcnative

Due to a new https://github.com/netty/netty/pull/10407[SSL default value introduced in Netty 4.1.52], if you are using tcnative you need to update it to `2.0.33.Final`.

=== Module Upgrades

TODO

=== Dependency Upgrades

TODO