@@ -17,6 +17,7 @@ package io.micronaut.context.env
 
 import com.github.stefanbirkner.systemlambda.SystemLambda
 import io.micronaut.context.ApplicationContext
+import io.micronaut.context.ApplicationContextConfiguration
 import io.micronaut.context.exceptions.ConfigurationException
 import io.micronaut.core.naming.NameUtils
 import spock.lang.Specification
@@ -588,6 +589,76 @@ class DefaultEnvironmentSpec extends Specification {
 
         then: // specified has priority over env, even if already set in env
         env.activeNames == ["test", "first", "third", "second"] as Set
+    }
+
+    void "test the default environment is applied"() {
+        when:
+        Environment env = new DefaultEnvironment(new ApplicationContextConfiguration() {
+            @Override
+            List<String> getEnvironments() {
+                return []
+            }
+
+            @Override
+            List<String> getDefaultEnvironments() {
+                return ['default']
+            }
+        }).start()
+
+        then:
+        env.activeNames == ['test', 'default'] as Set
+
+        when: 'an environment is specified'
+        env = new DefaultEnvironment(new ApplicationContextConfiguration() {
+            @Override
+            List<String> getEnvironments() {
+                return ['foo']
+            }
+
+            @Override
+            List<String> getDefaultEnvironments() {
+                return ['default']
+            }
+        }).start()
+
+        then: 'the default environment is not applied'
+        env.activeNames == ['test', 'foo'] as Set
+
+        when: 'an environment is specified through env var'
+        SystemLambda.withEnvironmentVariable("MICRONAUT_ENVIRONMENTS", "bar")
+                .execute(() -> {
+                    env = new DefaultEnvironment(new ApplicationContextConfiguration() {
+                        @Override
+                        List<String> getEnvironments() {
+                            return []
+                        }
+
+                        @Override
+                        List<String> getDefaultEnvironments() {
+                            return ['default']
+                        }
+                    }).start()
+                })
+
+        then: 'the default environment is not applied'
+        env.activeNames == ['test', 'bar'] as Set
+
+        when: 'an environment is specified through a system prop'
+        System.setProperty('micronaut.environments', 'xyz')
+        env = new DefaultEnvironment(new ApplicationContextConfiguration() {
+            @Override
+            List<String> getEnvironments() {
+                return []
+            }
+
+            @Override
+            List<String> getDefaultEnvironments() {
+                return ['default']
+            }
+        }).start()
+
+        then: 'the default environment is not applied'
+        env.activeNames == ['test', 'xyz'] as Set
     }
 
     private static Environment startEnv(String files) {
