@@ -46,3 +46,19 @@ $  java -Dmicronaut.env.deduction=false -jar myapp.jar
 Alternatively, you can disable environment deduction using the api:context.ApplicationContextBuilder[]'s `deduceEnvironment` method when setting up your application.
 
 snippet::io.micronaut.docs.context.env.DefaultEnvironmentSpec[tags="disableEnvDeduction",indent=0,title="Using ApplicationContextBuilder to disable environment deduction"]
+
+== Default Environment
+
+Micronaut supports the concept of one or many default environments. A default environment is one that is only applied if no other environments are explicitly specified. Environments can be explicitly specified either through the application context builder `Micronaut.build().environments(...)`, through the `micronaut.environments` system property, or the `MICRONAUT_ENVIRONMENTS` environment variable. If an environment is configured through any of the above means, the default environment will *not* be applied.
+
+To set the default environments, modify your application main method:
+
+[source,java]
+----
+public static void main(String[] args) {
+    Micronaut.build(args)
+            .mainClass(Application.class)
+            .defaultEnvironments("dev")
+            .start();
+}
+----
